# block-graph

./: Cargo.toml  README.md
src/: ai.rs  block.rs  builtin.rs  burn.rs  graph.rs  layer.rs  lib.rs  mod.rs  ops.rs  util.rs  value.rs
src/builtin/: math.rs  mod.rs  reinforcement.rs  soft.rs  structural.rs
src/burn/: layer.rs  mod.rs  shape.rs  value.rs
