[package]
name = "block-graph"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.17", features = ["fusion","train","wgpu"]}
bincode = {version = "2", features = ["serde"]}
rand = "0.9"
serde = { version = "1", features = ["derive"] }
walkdir = "2"

[profile.test]
opt-level = 3
