[package]
authors = ["Aili Nierengarten <aili.nierengarten@gmail.com>"]
description = "Uses the Burn library to provide block level graph neural network structure"
documentation = "https://docs.rs/block_graph"
edition = "2024"
license = "MIT"
name = "block-graph"
repository = "https://github.com/8000thCube/block-graph"
version = "0.1.2"

[dependencies]
burn = { version = "0.18", features = ["fusion","ndarray","train"]}
rand = "0.9"
serde = { version = "1", features = ["derive"]}
[profile.test]
opt-level = 3
